--- a/style.css
+++ b/style.css
@@ -1,128 +1,185 @@
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* height: 100vh; */
+@import url("https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap");
+body {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* height: 100vh; */
 }
 
-
-.holder{
-    border: 2px solid black;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100px;
+  background-color: #c62035;
+  padding: 10px;
 }
 
-#result{
-    border: 2px solid black;
-    height: 70%;
-    width: 35%;
-
-}
-#value{
-    width: 50px;
+#sitelogo {
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
 }
 
-.container{
-    width: 35%;
-    height: 70%;
-    border: 2px solid black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1em;
-    
+#sitelogo img {
+  height: 100px;
+  margin-left: 25px;
 }
 
-
-#container-box{
-    display: flex;
-}
-#revenue{
-    height: 20px;
-    height: 2em;
-    width: 2em;
-    border: 0.5px solid black;
-    background-color: bisque;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#advert{
-    border: 2px solid rgb(0, 0, 0);
-    height: 50%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
+#links {
+  -ms-flex-preferred-size: 80%;
+      flex-basis: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-input{
-    overflow: hidden;
-}
-#revenue-input{
-    
-    border: 0.5px solid black;
-    background-color: bisque;
-
+#links li {
+  display: inline;
+  margin-left: 10px;
 }
 
-input:focus{
-    outline: none;
-    /* border-color: #77be88; */
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #77be88;
-
+#links a {
+  text-decoration: none;
+  font-size: 15px;
+  font-family: Helvetica;
+  color: black;
 }
 
-
-#growth{
-    height: 20px;
-    height: 2em;
-    width: 2em;
-    border: 0.5px solid black;
-    background-color: bisque;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#links .button {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
-
-#growth-input{
-    border: 0.5px solid black;
-    background-color: bisque;
-
+.holder {
+  border: 2px solid black;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-#renewal{
-    height: 20px;
-    height: 2em;
-    width: 2em;
-    border: 0.5px solid black;
-    background-color: bisque;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#result {
+  border: 2px solid black;
+  height: 70%;
+  width: 35%;
+  position: relative;
+  bottom: 5em;
 }
 
-
-#renewal-input{
-    border: 0.5px solid black;
-    background-color: bisque;
+#value {
+  width: 50px;
 }
 
-#value{
-    width: 3.5em;
-    height: 2.5em;
-    background-color: antiquewhite;
-    border-style: none;
-    border: 1px solid black;
-    cursor: pointer;
+.container {
+  width: 35%;
+  height: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 3.2em;
+  position: relative;
+  bottom: 5em;
 }
 
-#value:hover{
-    background-color: bisque;
+#container-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
+
+#advert {
+  height: 20%;
+  width: 100%;
+  top: 0;
+}
+
+#advert p {
+  color: red;
+  font-family: 'Bubblegum Sans', cursive;
+  font-size: 36px;
+  line-height: 0;
+}
+
+input {
+  overflow: hidden;
+  border-radius: 0 5px 5px 0;
+  width: 70%;
+  height: 3.38em;
+  border: 1.2px solid black;
+  left: 0;
+}
+
+.sign {
+  border-radius: 5px 0 0 5px;
+  color: #273157;
+  height: 20px;
+  height: 3em;
+  width: 2em;
+  border: 0.5px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+input {
+  background-color: white;
+}
+
+input:focus {
+  outline: none;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #77be88;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #77be88;
+}
+
+#value {
+  border-style: none;
+  border: 1px solid black;
+  cursor: pointer;
+  background-color: #c62035;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 20px 40%;
+}
+
+#value:hover {
+  background-color: #b82538;
+}
+/*# sourceMappingURL=style.css.map */
