--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  gap: 3.2em;
+  gap: 2.2em;
   position: relative;
   bottom: 5em;
 }
@@ -112,12 +112,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-#advert {
-  height: 20%;
-  width: 100%;
-  top: 0;
 }
 
 #advert p {
@@ -154,14 +148,26 @@ input {
           align-items: center;
 }
 
+.sign p {
+  color: red;
+}
+
+#revenue span {
+  font-size: 14px;
+}
+
 input {
   background-color: white;
 }
 
 input:focus {
   outline: none;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #77be88;
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #77be88;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #273157;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #273157;
+}
+
+input:focus #revenue {
+  background-color: red;
 }
 
 #value {
