--- a/style.scss
+++ b/style.scss
@@ -78,7 +78,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 3.2em;
+    gap: 2.2em;
     position: relative;
     bottom: 5em;
 }
@@ -89,9 +89,6 @@ body{
 }
 
 #advert{
-    height: 20%;
-    width: 100%;
-    top: 0;
     // overflow: hidden;
 
     p{
@@ -123,6 +120,17 @@ input{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    p{
+        color: red;
+    }
+}
+
+#revenue{
+    span{
+        font-size: 14px;
+    }
+    
 }
 
 
@@ -131,9 +139,15 @@ input{
     background-color: white;
     
 }
+
 input:focus{
+
     outline: none;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #77be88;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #273157;
+
+    #revenue{
+        background-color: red;
+    }
 
 }
 
