--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ body {
 }
 
 .holder {
-  border: 2px solid black;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -79,11 +78,14 @@ body {
 }
 
 #result {
-  border: 2px solid black;
   height: 70%;
   width: 35%;
   position: relative;
   bottom: 5em;
+}
+
+#result p {
+  font-size: 30px;
 }
 
 #value {
@@ -166,8 +168,19 @@ input:focus {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #273157;
 }
 
-input:focus #revenue {
-  background-color: red;
+.calculator-outline {
+  width: 12em;
+  height: 5em;
+}
+
+.calculator-outline-2 {
+  width: 100%;
+  height: 7em;
+}
+
+.pie-chart-outline {
+  width: 100%;
+  height: 7em;
 }
 
 #value {
