--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,6 @@ body{
   }
 
 .holder{
-    border: 2px solid black;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -61,11 +60,13 @@ body{
 }
 
 #result{
-    border: 2px solid black;
     height: 70%;
     width: 35%;
     position: relative;
     bottom: 5em;
+    p{
+        font-size: 30px;
+    }
 
 }
 #value{
@@ -145,23 +146,22 @@ input:focus{
     outline: none;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.07), 0 0 8px #273157;
 
-    #revenue{
-        background-color: red;
-    }
 
 }
 
-// label{
-//     color: red;
-//     position: relative;
-//     bottom: 30px;
-//     border: 2px solid black;
-//     display: flex;
-//     width: 100%;
-//     justify-content: center;
-//     bottom: 40px;
-// }
+.calculator-outline{
+    width: 12em;
+    height: 5em;
+}
+.calculator-outline-2{
+    width: 100%;
+    height: 7em;
+}
 
+.pie-chart-outline{
+    width: 100%;
+    height: 7em;
+}
 
 #value{
     border-style: none;
